GKW: lab: completed lista-1

--- a/electives/gkw/lab/lista-1/ex-5/index.html
+++ b/electives/gkw/lab/lista-1/ex-5/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.scss" />
 
-    <title>Zadania 1. 2. 3.</title>
+    <title>Zadanie 5.</title>
 
 </head>
 
@@ -17,14 +17,9 @@
 
     <canvas width="600" height="600" id="canvas"></canvas>
 
-    <!-- for some reason `parcel` removes the `id` tag -->
-    <svg width="600" height="600"></svg>
-
     <form id="execution-form">
 
         <textarea name="command" id="command-input" autofocus></textarea>
-
-        <button type="button" id="switch-canvas">Switch canvas mode, current: CANVAS</button>
 
         <button type="button" id="clear-button">Clear</button>
 
