--- a/electives/gkw/lab/lista-1/index.html
+++ b/electives/gkw/lab/lista-1/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Lista 1.</title>
 </head>
 <body>
 
     <a href="ex-1-2-3/index.html">Zadania 1. 2. 3.</a>
 
     <a href="ex-4/index.html">Zadanie 4.</a>
+
+    <a href="ex-5/index.html">Zadanie 5.</a>
 
 </body>
 </html>
