GKW: lab: lista-2: improved ex-2, updated makefile and added the compiled version

--- a/electives/gkw/lab/lista-2/ex-2/index.html
+++ b/electives/gkw/lab/lista-2/ex-2/index.html
@@ -24,12 +24,15 @@
             <option>Sierpiński</option>
         </select>
 
+        <input id="level-input" type="number" placeholder="Fractal level" value="5"/>
+
         <input id="colour-input" type="text" placeholder="Colour, format: R, G, B" value="1,0,1"/>
 
         <button type="submit">Draw</button>
     </form>
 
-    <p>Move the last added fractal using Up and Down arrow keys.</p>
+    <p>Move the last added fractal using the <code>h</code>, <code>j</code>, <code>k</code>, or <code>l</code> keys.</p>
+    <p>To alter the Z axis of the fractal press <code>Shift</code> and <code>j</code>, or <code>k</code>.</p>
 
     <script src="main.ts"></script>
 
