GKW: lab: lista-2: added ex-4

--- a/electives/gkw/lab/lista-2/ex-3-4/index.html
+++ b/electives/gkw/lab/lista-2/ex-3-4/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zadanie 3.</title>
+    <title>Zadania 3. oraz 4.</title>
 
     <style>
         form {
@@ -18,6 +18,8 @@
 
     <canvas width="600" height="600"></canvas>
 
+    <img src="img/avatar.png" id="avatar" hidden/>
+    <img src="img/background.png" id="background" hidden/>
     <script src="main.ts"></script>
 
 </body>
